# onedep_lib

./: .gitignore  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: codeql.yml
docs/: auth_flow.md
docs/diagrams/: deposit-simple.mermaid  deposit.mermaid
examples/: em_deposition.py  xray_deposition.py
src/onedep_lib/: __init__.py  config.py  dsp.py  enums.py  exceptions.py
src/onedep_lib/apis/deposit/: client.py  enums.py  models.py  types.py
src/onedep_lib/auths/: __init__.py  token.py  types.py
src/onedep_lib/checks/: report.py  runner.py  types.py
src/onedep_lib/schemas/: __init__.py  local.py  remote.py  types.py
src/onedep_lib/schemas/json/: ec.json  em.json  fiber.json  neutron.json  nmr.json  required_files.json  ssnmr.json  xray.json
src/onedep_lib/session/: json_store.py  models.py  types.py
tests/: test_config.py  test_enums.py  test_exceptions.py  test_onedep_lib.py
tests/auths/: test_token.py
tests/checks/: test_report.py  test_runner.py
tests/fixtures/: files.json
tests/integration/: test_session_schema.py
tests/schemas/: test_get_file_types.py  test_local.py  test_remote.py  test_required_files.py
tests/session/: test_json_store.py  test_models.py  test_store.py
tests/unit/: test_deposition_facade.py
tests/unit/apis/deposit/: conftest.py  test_http_api_client.py  test_models.py  test_stub_api_client.py
